--- a/templates/add_course.html
+++ b/templates/add_course.html
@@ -7,6 +7,7 @@
         <input type="file" id="file-upload" name="course_syllabus_file" onchange="updateFileName()">
         <span id="file-name">No file chosen</span>
     </div>
+    <input type="text" class="input-field" id="xtraInst" name = "extra_instructions" placeholder="Add Extra Instuctions (Optional)">
     <button type="submit" class="button" id="submit-course">Add Course Assignments</button>
 </form>
 {%endblock content%}
